--- a/IRMinesweeper/IRMinesweeper.csproj
+++ b/IRMinesweeper/IRMinesweeper.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hint.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Mine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
